<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:theme="@style/AppTheme"
        app:logo="@drawable/ic_restaurant_white_24px"
        app:popupTheme="@style/Theme.AppCompat.Light.DarkActionBar"
        app:title="@string/app_name"
        app:titleMarginStart="24dp"
        app:titleTextColor="@android:color/white" />

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="5dp"
        card_view:cardCornerRadius="4dp">

        <Button
            android:id="@+id/restaurent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#EC407A"
            android:textColor="@color/colorWhite"
            android:textSize="24sp"
            android:text="@string/restaurent"/>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="5dp"
        card_view:cardCornerRadius="4dp">

        <Button
            android:id="@+id/daily_needs"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#00E676"
            android:textColor="@color/colorWhite"
            android:textSize="24sp"
            android:text="@string/daily_needs"/>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="5dp"
        card_view:cardCornerRadius="4dp">

        <Button
            android:id="@+id/fruits_and_vegitable"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#29B6F6"
            android:textColor="@color/colorWhite"
            android:textSize="24sp"
            android:text="@string/fruits_and_vegetables"/>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="5dp"
        card_view:cardCornerRadius="4dp">

        <Button
            android:id="@+id/medicines"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#78909C"
            android:textColor="@color/colorWhite"
            android:textSize="24sp"
            android:text="@string/medicines"/>

    </android.support.v7.widget.CardView>

</LinearLayout>